AMP-7122
git-svn-id: file:///svn/trunk@11342 9e8d75aa-d0cb-44a9-8341-a4b8ba1a38b4