@@ -410,9 +410,7 @@ public class SaveActivity extends Action {
 		}
 
 		try {
-			
-			AmpCategoryValue catVal=CategoryManagerUtil.getAmpCategoryValueFromDb(Long.parseLong(eaForm.getPlanning().getLineMinRank()));
-			activity.setLineMinRank(new Integer(catVal.getValue()));
+			activity.setLineMinRank(Integer.valueOf(eaForm.getPlanning().getLineMinRank()));
 			if (activity.getLineMinRank().intValue() < 1 || activity.getLineMinRank().intValue() > 5) {
 				logger.debug("Line Ministry Rank is out of permisible range (1 to 5)");
 				activity.setLineMinRank(null);
@@ -423,10 +421,8 @@ public class SaveActivity extends Action {
 			activity.setLineMinRank(null);
 		}
 		try {
-			AmpCategoryValue catVal=CategoryManagerUtil.getAmpCategoryValueFromDb(Long.parseLong(eaForm.getPlanning().getPlanMinRank()));
-			activity.setPlanMinRank(new Integer(catVal.getValue()));
+			activity.setPlanMinRank(Integer.valueOf(eaForm.getPlanning().getPlanMinRank()));
 			if (activity.getPlanMinRank().intValue() < 1 || activity.getPlanMinRank().intValue() > 5) {
-			//if (Integer.parseInt(catVal.getValue()) < 1 || Integer.parseInt(catVal.getValue()) > 5) {
 				logger.debug("Plan Ministry Rank is out of permisible range (1 to 5)");
 				activity.setPlanMinRank(null);
 			}
